--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -7,10 +7,10 @@
             </div>
 
             <div id = "aba-espectro" class="aba-aplicacao" data-aba = "frequencia"  >
-                <button class = "aba-btn" onclick = "trocarAbas('frequencia')" id = "btn-frequencia" >Frequência</button>
+                <button class = "aba-btn" onclick = "trocarAbas('frequencia')" id = "btn-frequencia" >Espectro</button>
             </div>
             <div id = "aba-ambos" class="aba-aplicacao" data-aba = "ambos"  >
-                <button class = "aba-btn" onclick = "trocarAbas('ambos')" id = "btn-ambos" >Tempo & Frequência</button>
+                <button class = "aba-btn" onclick = "trocarAbas('ambos')" id = "btn-ambos" >Ambos</button>
             </div>
     </div>
 
@@ -22,29 +22,24 @@
             <input type="checkbox" id = "sinal1" checked></input>
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs2" >
+        <div class = "container-visualizacao-sinais" id = "cs2" style="display: none;">
             <label for="sinal2">S2</label>
             <input type="checkbox" id = "sinal2" ></input >
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs3">
+        <div class = "container-visualizacao-sinais" id = "cs3" style="display: none;">
             <label for="sinal3">S3</label>
             <input type="checkbox" id = "sinal3" ></input>
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs4">
+        <div class = "container-visualizacao-sinais" id = "cs4" style="display: none;">
             <label for="sinal4">S4</label>
             <input type="checkbox" id = "sinal4"></input>
         </div>
 
-        <div class = "container-visualizacao-sinais" id = "cs5"> 
+        <div class = "container-visualizacao-sinais" id = "cs5" style="display: none;"> 
             <label for="sinal5">S5</label>
             <input type="checkbox" id = "sinal5"></input>
-        </div>
-
-        <div class = "container-visualizacao-sinais" id = "cs6"> 
-            <label for="sinal6">RES</label>
-            <input type="checkbox" id = "sinal6"></input>
         </div>
 
     </div>
