--- a/Django/home/templates/home/aba-esquerda.html
+++ b/Django/home/templates/home/aba-esquerda.html
@@ -38,12 +38,12 @@
                       <div class="form-group" id="grupo-duracao">
                           <label for="entrada-duracao" class="form-label">Duração</label>
                           <div class="form-number">
-                              <input type="number" name="entrada-duracao" id="entrada-duracao" min= 1 max = 100 value = 1 required>
+                              <input type="number" name="entrada-duracao" id="entrada-duracao" min= 1 max = 100 value = 1 m required>
                           </div>            
                       </div> 
               
                       <!-- Taxa de amostragem -->
-                      <div class="form-group" id="grupo-rate">
+                      <div class="form-group" id="grupo-intervalo">
                           <label for="entrada-rate" class="form-label">Rate</label>
                           <div class="form-number">
                               <input type="number" name="entrada-rate" id="entrada-rate" min= 0 max = 5000 step = 5  value = 1000 required>
