--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -24,7 +24,7 @@
         <div class="form-group" id="grupo-amplitude">
             <label for="entrada-amplitude" class="form-label">Amplitude</label>
             <div class="form-number">
-                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 value = 1  step = 1.00 required> 
+                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100  value = 1  step = 1.00 required> 
             </div>            
         </div> 
 
@@ -32,7 +32,7 @@
         <div class="form-group" id="grupo-frequencia">
             <label for="entrada-frequencia" class="form-label">Frequência</label>
             <div class="form-number">
-                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 value = 1  required data-sinais = '{{sinais_json|safe}}'>
+                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 10000  value = 1  required data-sinais = '{{sinais_json|safe}}'>
             </div>            
         </div> 
 
@@ -87,22 +87,6 @@
         </div>
 
     </div>
-
-
-    <!-- PERÍODO
-     
-    
-    <div class="container-par-entradas">
-        
-        <div class="form-group" id="grupo-periodo">
-            <label for="entrada-periodo" class="form-label">Período</label>
-                <div class="form-number">
-                    <input type="number" name="entrada-periodo" id="entrada-periodo" min= 0 max = 1 step = 0.05 value = 0.5>
-                </div>            
-        </div>
-    </div>
-    
-    -->
 
 
 </form>
