--- a/Django/templates/static/osciloscopio/css/base/formulario-unidades.css
+++ b/Django/templates/static/osciloscopio/css/base/formulario-unidades.css
@@ -17,6 +17,7 @@
   .form-container {
    
     flex: 1;
+    
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -41,7 +42,7 @@
   .form-label {
     text-align: center;
     color: black;
-    font-size: 0.9vw;
+    font-size: 1.1vw;
   }
   
   .form-input-group,
@@ -114,4 +115,13 @@
     border-radius: 4px;
     display: block;
     margin-bottom: 10px;
+  }
+
+
+
+  /* Responsividade */
+  @media (max-width: 600px) {
+    .form-group {
+      width: 100%;
+    }
   }
