--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -31,7 +31,6 @@
     cursor: pointer;
     z-index: 1;
 
-
     overflow: hidden;
 }
 
@@ -42,7 +41,7 @@
     align-items: center;
 
     width: 100%;
-    height: 5%;
+    height: 8%;
     border-top: 1px solid white;
 
     padding-top: 10px;
@@ -66,13 +65,9 @@
 #cs5{
     color: purple;
 }
-
-#cs6{
-    color: magenta;
-}
 .area-grafico{
-    width: 100%;
-    height: 85%;
+    
+    flex: 1;
 
     display: flex;
     flex-direction: column;
@@ -91,7 +86,6 @@
     align-items: center;
     justify-content: center;
 
-    margin: 10px;
     box-shadow: 1px 1px 4px;
 
 }
@@ -104,7 +98,6 @@
     border-top-left-radius: 10px;
     border-color: white;
     cursor: pointer;
-    padding: 10px;
 }
 
 .aba-btn.active{
