--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -1,4 +1,5 @@
 .aba {
+    width: 10%;
     height: 100%;
     background: var(--cinza-claro);
     border-right: var(--espessura-borda) solid #666;
@@ -10,14 +11,10 @@
 
 }
 
-#aba-esquerda{
-    width: 5%;
-}
-
 #aba-direita{
 
     display: block;
-    width: 15%;
+    width: 25%;
     border-right: none;
     border-bottom-left-radius: 0;
     border-left: var(--espessura-borda) solid #666;
@@ -26,7 +23,7 @@
 }
 
 #titulo-entradas{
-    font-size: 1vw;
+    font-size: 1.5vw;
     color: black;
 }
 
@@ -65,8 +62,7 @@
 
 
 
-.container-aba, 
-.container-aba-futura{
+.container-aba{
     width: 50%;
     height: 100%;
 
@@ -173,7 +169,6 @@ flex: 1;
 }
 
 
-
 #form-entrada{
     width: 100%;
     height: 100%;
@@ -219,13 +214,6 @@ flex: 1;
 
 #abas-futuras>div{
     width: 25%;
-}
-
-
-#entrada-operacao{
-    width: 40px;
-    border: solid 1px green;
-    margin: 0;
 }
 
 
